--- a/packages/graphiql/index.html
+++ b/packages/graphiql/index.html
@@ -4,6 +4,7 @@
     <base href="/" />
     <meta charset="utf-8" />
     <title>YogaGraphiQL Dev</title>
+    <link rel="icon" href="https://www.graphql-yoga.com/favicon.ico" />
   </head>
   <body id="body" class="no-focus-outline">
     <noscript>You need to enable JavaScript to run this app.</noscript>
