--- a/examples/sveltekit/src/app.html
+++ b/examples/sveltekit/src/app.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>GraphQL Yoga - SvelteKit</title>
 		<meta charset="utf-8" />
-		<meta name="description" content="" />
-		<link rel="icon" href="/favicon.png" />
+		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		%svelte.head%
+		%sveltekit.head%
 	</head>
 	<body>
-		<div id="svelte">%svelte.body%</div>
+		<div>%sveltekit.body%</div>
 	</body>
 </html>
