--- a/packages/common/src/graphiql.html
+++ b/packages/common/src/graphiql.html
@@ -14,7 +14,7 @@
     <div id="root"></div>
 
     <script type="module">
-      import { renderYogaGraphiQL } from 'https://unpkg.com/@graphql-yoga/graphiql@__GRAPHIQL_VERSION__'
+      import { renderYogaGraphiQL } from 'https://unpkg.com/@graphql-yoga/graphiql@__GRAPHIQL_VERSION__/dist/yoga-graphiql.es.js'
       renderYogaGraphiQL(root, __OPTS__)
     </script>
   </body>
