--- a/packages/graphql-yoga/src/landing-page.html
+++ b/packages/graphql-yoga/src/landing-page.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Welcome to GraphQL Yoga</title>
-    <link rel="icon" href="https://www.graphql-yoga.com/favicon.ico" />
+    <link rel="icon" href="https://raw.githubusercontent.com/dotansimha/graphql-yoga/v3/website/public/favicon.ico" />
     <style>
       body,
       html {
