--- a/packages/graphiql/index.html
+++ b/packages/graphiql/index.html
@@ -4,7 +4,10 @@
     <base href="/" />
     <meta charset="utf-8" />
     <title>YogaGraphiQL Dev</title>
-    <link rel="icon" href="https://raw.githubusercontent.com/dotansimha/graphql-yoga/v3/website/public/favicon.ico" />
+    <link
+      rel="icon"
+      href="https://raw.githubusercontent.com/dotansimha/graphql-yoga/v3/website/public/favicon.ico"
+    />
   </head>
   <body id="body" class="no-focus-outline">
     <noscript>You need to enable JavaScript to run this app.</noscript>
