--- a/packages/graphql-yoga/src/graphiql.html
+++ b/packages/graphql-yoga/src/graphiql.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <title>__TITLE__</title>
-    <link rel="icon" href="https://www.graphql-yoga.com/favicon.ico" />
+    <link
+      rel="icon"
+      href="https://raw.githubusercontent.com/dotansimha/graphql-yoga/v3/website/public/favicon.ico"
+    />
     <link
       rel="stylesheet"
       href="https://unpkg.com/@graphql-yoga/graphiql@__GRAPHIQL_VERSION__/dist/style.css"
