--- a/packages/graphql-yoga/src/landing-page.html
+++ b/packages/graphql-yoga/src/landing-page.html
@@ -360,8 +360,14 @@
         </div>
         <h2>The batteries-included cross-platform GraphQL Server.</h2>
         <div class="buttons">
-          <a href="https://graphql-yoga.com/docs" class="docs">Read the Docs</a>
-          <a href="https://graphql-yoga.com/tutorial" class="tutorial"
+          <a
+            href="https://www.the-guild.dev/graphql/yoga-server/v3"
+            class="docs"
+            >Read the Docs</a
+          >
+          <a
+            href="https://www.the-guild.dev/graphql/yoga-server/tutorial/basic"
+            class="tutorial"
             >Start the Tutorial
           </a>
           <a href="__GRAPHIQL_LINK__" class="graphiql">Visit GraphiQL</a>
